clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__and_or_lists__parse_chained_and.snap
---
source: clash-brush-parser/src/parser/tests/and_or_lists.rs
assertion_line: 33
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cmd1 && cmd2 && cmd3",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cmd1",
                  loc: "[location]",
                )),
              )),
            ],
          ),
          additional: [
            And(Pipeline(
              seq: [
                Simple(SimpleCommand(
                  word_or_name: Some(Word(
                    value: "cmd2",
                    loc: "[location]",
                  )),
                )),
              ],
            )),
            And(Pipeline(
              seq: [
                Simple(SimpleCommand(
                  word_or_name: Some(Word(
                    value: "cmd3",
                    loc: "[location]",
                  )),
                )),
              ],
            )),
          ],
        ), Sequence),
      ]),
    ],
  ),
)
